Fix widget action rendering issue in menubar (macOS)

This workaround QTBUG-60424.

Task-Id: KDEND-157